<resources>
    <string name="app_name">DC Comics</string>
    <string name="superman">Superman</string>
    <string name="sub_nombre">Nombre:</string>
    <string name="nombre_superman">Clark Kent</string>
    <string name="sub_poderes">Poderes:</string>
    <string name="poderes_superman">super fuerza, volar, invulnerabilidad, super velocidad, visión caliente, aliento frío, vision de rayos X, Audición sobrehumana, factor de curación</string>
    <string name="titulo_registro">REGISTRO DE SUPERHEROE</string>
    <string name="boton_registrar">Registrar</string>
    <string name="registro_nombre">Nombre</string>
    <string name="estatura">Estatura</string>
    <string name="info">"Nombre: %s, estatura: %f, género: %s", poderes: %s", ciudadNacimiento: %s</string>
    <string name="genero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="poderes">Poderes</string>
    <string name="superfuerza">Super Fuerza</string>
    <string name="velocidad">Velocidad</string>
    <string name="telepatia">Telepatía</string>
    <string name="ciudad_nacimiento">Ciudad de Nacimiento</string>
    <string-array name="lista_ciudades">
        <item>Ciudad Central</item>
        <item>Ciudad Gótica</item>
        <item>Tesmicira</item>
        <item>Metrópolis</item>
    </string-array>
</resources>